--- a/trunk/ServerJava/WebContent/WEB-INF/web.xml
+++ b/trunk/ServerJava/WebContent/WEB-INF/web.xml
@@ -24,18 +24,39 @@
         </init-param>
         <load-on-startup>3</load-on-startup>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>MainController</servlet-name>
         <url-pattern>/frmMain</url-pattern>
     </servlet-mapping>
-        
     
+     
+     
+  <servlet>
+        <servlet-name>ReportServlet</servlet-name>
+        <servlet-class>net.nan21.ebs.service.ReportServlet</servlet-class>
+        <init-param>
+            <param-name>logVerbosityLevel</param-name>
+            <param-value>WARNING</param-value>
+        </init-param>
+        <init-param>
+            <param-name>fork</param-name>
+            <param-value>false</param-value>
+        </init-param>
+        <load-on-startup>3</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ReportServlet</servlet-name>
+        <url-pattern>/runReport</url-pattern>
+    </servlet-mapping>
+    
+    
+         
     <resource-ref>
 		<description>Oracle XE Datasource connection</description>
-		<res-ref-name>jdbc/nan21_xe</res-ref-name>
+		<res-ref-name>jdbc/nan21ebs</res-ref-name>
 		<res-type>oracle.jdbc.pool.OracleDataSource</res-type>
 		<res-auth>Container</res-auth>
-	</resource-ref>   
-    
+	</resource-ref>
+
+ 
 </web-app>
