--- a/trunk/ServerJava/WebContent/WEB-INF/web.xml
+++ b/trunk/ServerJava/WebContent/WEB-INF/web.xml
@@ -10,10 +10,10 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
-  
+
   <servlet>
-        <servlet-name>MainController</servlet-name>
-        <servlet-class>net.nan21.ebs.service.MainController</servlet-class>
+        <servlet-name>DcServlet</servlet-name>
+        <servlet-class>net.nan21.lib.servlet.DcServlet</servlet-class>
         <init-param>
             <param-name>logVerbosityLevel</param-name>
             <param-value>WARNING</param-value>
@@ -22,18 +22,23 @@
             <param-name>fork</param-name>
             <param-value>false</param-value>
         </init-param>
+        <init-param>
+            <param-name>configFilesPath</param-name>
+            <!-- D:\work\php\n21eBusinessSuite\ServerJava\src -->
+            <param-value></param-value>
+        </init-param>
         <load-on-startup>3</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>MainController</servlet-name>
-        <url-pattern>/frmMain</url-pattern>
+        <servlet-name>DcServlet</servlet-name>
+        <url-pattern>/dc</url-pattern>
     </servlet-mapping>
     
      
      
   <servlet>
         <servlet-name>ReportServlet</servlet-name>
-        <servlet-class>net.nan21.ebs.service.ReportServlet</servlet-class>
+        <servlet-class>net.nan21.lib.servlet.ReportServlet</servlet-class>
         <init-param>
             <param-name>logVerbosityLevel</param-name>
             <param-value>WARNING</param-value>
@@ -46,17 +51,17 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>ReportServlet</servlet-name>
-        <url-pattern>/runReport</url-pattern>
+        <url-pattern>/report</url-pattern>
     </servlet-mapping>
     
     
          
-    <resource-ref>
+  <resource-ref>
 		<description>Oracle XE Datasource connection</description>
 		<res-ref-name>jdbc/nan21ebs</res-ref-name>
 		<res-type>oracle.jdbc.pool.OracleDataSource</res-type>
 		<res-auth>Container</res-auth>
 	</resource-ref>
 
- 
+
 </web-app>
